Optimize achievement checks for online clients and improve test clarity